tests/baselines/reference/augmentedClassWithPrototypePropertyOnModule.errors.txt
==== tests/cases/compiler/augmentedClassWithPrototypePropertyOnModule.ts (1 errors) ====
    declare module m {
        var f;
        var prototype; // This should be error since prototype would be static property on class m
            ~~~~~~~~~
!!! augmentedClassWithPrototypePropertyOnModule.ts(3,9): error TS2000: Duplicate identifier 'prototype'.
    }
    declare class m {
    }